<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menuRefresh"
            android:title="@string/bekijktegoed"
            android:actionLayout="@layout/refresh_action_view"
            android:showAsAction="always"/>
    <item
            android:id="@+id/menuSettings"
            android:title="@string/settings"
            android:showAsAction="withText"
            />
    <item
            android:id="@+id/menuDeleteHistory"
            android:title="@string/removeHistory"
            android:icon="@android:drawable/ic_menu_delete"
            android:showAsAction="withText"
            />
    <item
            android:id="@+id/menuAbout"
            android:title="@string/about"
            android:showAsAction="withText"
            />

</menu>